[project]
name = "reflex-web"
version = "0.0.1"
authors = [
    { name = "Nikhil Rao", email = "nikhil@reflex.dev" },
    { name = "Alek Petuskey", email = "alek@reflex.dev" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.2.0",
    "black>=25.0",
    "pandas>=1.5.3",
    "psycopg[binary]==3.2.9",
    "plotly-express==0.4.1",
    "googletrans-py==4.0.0",
    "openai==1.97.0",
    "flexdown>=0.2.0",
    "reflex @ git+https://github.com/reflex-dev/reflex@main",
    "reflex-ui @ git+https://github.com/reflex-dev/reflex-ui@main",
    "mistletoe>=1.2.1",
    "reflex-image-zoom>=0.0.2",
    "replicate==1.0.7",
    "reflex-pyplot==0.2.1",
    "reflex-enterprise>=0.3.3",
    "requests>=2.32.3",
    "posthog==6.1.1",
    "typesense>=1.1.1",
    "fastapi",
    "reflex-hosting-cli>=0.1.56",
    "python-frontmatter>=1.1.0"
]

[dependency-groups]
dev = ["pytest", "playwright", "pytest-playwright", "uvicorn"]

[tool.setuptools.packages.find]
where = ["pcweb"]

[tool.ruff]
target-version = "py311"
output-format = "concise"
lint.isort.split-on-trailing-comma = false
lint.select = [
    "ANN001",
    "B",
    "C4",
    "D",
    "E",
    "ERA",
    "F",
    "FURB",
    "I",
    "N",
    "PERF",
    "PGH",
    "PTH",
    "RUF",
    "SIM",
    "T",
    "TRY",
    "W",
]
lint.ignore = [
    "B008",
    "D205",
    "E501",
    "F403",
    "SIM115",
    "RUF006",
    "RUF008",
    "RUF012",
    "TRY0",
]
lint.pydocstyle.convention = "google"
[tool.uv]
required-version = ">=0.7.0"
